# Atlas

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
docs/: README.md
docs/assets/: test-diagram.html
docs/assets/diagrams/: device-info-architecture-zh.html  device-info-architecture.html
docs/assets/js/: interactive-diagram.js
docs/en/: README.md
docs/en/api/: README.md
docs/en/api/core/device-info/: README.md  api-reference.md
docs/zh/: README.md
docs/zh/api/: README.md
docs/zh/api/core/device-info/: README.md  api-reference.md
src/atlas/: __init__.py
src/atlas/core/: __init__.py
src/atlas/core/_infra/: __init__.py  device_info.py
src/atlas/core/initialization/: __init__.py
src/atlas/core/initialization/base/: __init__.py  _init_base.py  _init_meta.py
src/atlas/core/initialization/procedures/: __init__.py  _init_directory.py
src/atlas/lib/: __init__.py
src/atlas/lib/models/: __init__.py  _base_md.py
src/atlas/lib/models/configuration/: __init__.py  env_vars_md.py
src/atlas/lib/models/parameters/: __init__.py  progress_bar_params_md.py
src/atlas/models/: __init__.py
src/atlas/models/base/: __init__.py  _internal_base_model.py
src/atlas/models/domain/: __init__.py
src/atlas/models/domain/_infra/device_info/: constants.py  models.py
src/atlas/models/domain/_infra/device_info/methods/: _cpu_info.py  _disk_info.py  _memory_info.py  _network_info.py  _platform_info.py  get_device_info.py
src/atlas/schemas/: __init__.py
src/atlas/schemas/base/: __init__.py  _base_schema.py
src/atlas/schemas/entities/: __init__.py
src/atlas/schemas/entities/cls_device_info/: __init__.py  models.py
src/atlas/schemas/entities/cls_device_info/funcs/: get_device_info_model.py
src/atlas/schemas/entities/cls_logfire/: __init__.py
src/atlas/schemas/entities/cls_logfire/funcs/: configure_schema.py
src/atlas/utils/readers/: __init__.py  toml_reader.py
src/atlas/utils/toolkit/: __init__.py  _machine_info.py  _progress_bar.py
tests/: conftest.py
tests/fixtures/core/: __init__.py
tests/fixtures/core/_infra/: __init__.py
tests/fixtures/core/_infra/device_info/: __init__.py  data.py  fixtures.py
tests/fixtures/models/: __init__.py
tests/fixtures/models/base/internal_base_model/: data.py  fixtures.py
tests/fixtures/models/general/: fixtures.py
tests/integration/: __init__.py
tests/integration/core/: __init__.py
tests/integration/core/_infra/: __init__.py  test_device_info_integration.py
tests/unit/core/: __init__.py
tests/unit/core/_infra/: __init__.py  test_device_info.py
tests/unit/models/base/: __init__.py  test_internal_base_model.py
tests/unit/models/domain/: __init__.py
tests/unit/models/domain/_infra/: __init__.py
tests/unit/models/domain/_infra/device_info/: __init__.py  test_constants.py  test_models.py
