[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
dynamic = ["version"]
authors = [
    {name = "Frost Leo", email = "frostleo.dev@gmail.com"},
]
maintainers = [
    {name = "Frost Leo", email = "frostleo.dev@gmail.com"},
]
description = "A data platform with a modular and distributed design"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "GPL-3.0"}
keywords = ["atlas", "data platform", "distributed", "modular", "data middleware"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Environment :: Console",
]
dependencies = [
    "Django>=5.2.5,<6",
    "djangorestframework>=3.15",
]

[project.urls]
Homepage = "https://github.com/Frost-Leo/Atlas"
Download = "https://github.com/Frost-Leo/Atlas/archive/refs/heads/main.zip"
Repository = "https://github.com/Frost-Leo/Atlas"

[tool.setuptools]
zip-safe = false
include-package-data = true
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.dynamic]
version = {attr = "atlas.__version__"}