[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
dynamic = ["version"]
authors = [
    {name = "Frost Leo", email = "frostleo.dev@gmail.com"},
]
maintainers = [
    {name = "Frost Leo", email = "frostleo.dev@gmail.com"},
]
description = "A data platform with a modular and distributed design"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "GPL-3.0"}
keywords = ["atlas", "data platform", "distributed", "modular", "data middleware"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Environment :: Console",
]
dependencies = [
    "Django>=5.2.5,<6",
    "djangorestframework>=3.15",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "pydantic>=2.0.0",
    "logfire>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "django-stubs[compatible-mypy]>=5.0.0",
    "djangorestframework-stubs[compatible-mypy]>=3.15.0",
    "types-setuptools",
    "typeguard>=4.0.0",
    "beartype>=0.21.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/Frost-Leo/Atlas"
Download = "https://github.com/Frost-Leo/Atlas/archive/refs/heads/main.zip"
Repository = "https://github.com/Frost-Leo/Atlas"

[tool.setuptools]
zip-safe = false
include-package-data = true
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.dynamic]
version = {attr = "atlas.__version__"}

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
strict_equality = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true

[[tool.mypy.overrides]]
module = [
    "winreg.*",
    "logfire.*",
    "opentelemetry.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false