[metadata]
name = atlas
version = attr: atlas.version
author = Frost Leo
author_email = frostleo.dev@gmail.com
description = A Django architecture package that encapsulates Django REST framework.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-only
license_files = LICENSE
url = https://github.com/Frost-Leo/Atlas
project_urls =
    Documentation = https://github.com/Frost-Leo/Atlas/blob/main/README.md
    Source = https://github.com/Frost-Leo/Atlas
    Issues = https://github.com/Frost-Leo/Atlas/issues
keywords = atlas, django, djangorestframework, drf, rest framework, architecture
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.13
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.13
install_requires =
    Django>=5.2.5,<6
    djangorestframework>=3.15

[options.packages.find]
where = src
exclude =
    tests
    tests.*
    docs
    docs.*
    examples
    examples.*

[options.package_data]
atlas = py.typed

