[metadata]
name = atlas
version = attr: atlas.__version__
url = https://github.com/Frost-Leo/Atlas
download_url = https://github.com/Frost-Leo/Atlas/archive/refs/heads/main.zip
project_urls = https://github.com/Frost-Leo/Atlas
author = Frost Leo
author_email = frostleo.dev@gmail.com
maintainer = Frost Leo
maintainer_email = frostleo.dev@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Distributed Computing
    Topic :: Software Development :: Libraries :: Application Frameworks
    Operating System :: OS Independent
    Natural Language :: English
    Environment :: Console
license = GPL-3.0
license_files = LICENSE
description = A data platform with a modular and distributed design
long_description = file: README.md
long_description_content_type = text/markdown
keywords = atlas, data platform, distributed, modular, data middleware
platforms = any

[options]
zip_safe = False
python_requires = >=3.13
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    Django>=5.2.5,<6
    djangorestframework>=3.15
    opentelemetry-api>=1.36.0
    opentelemetry-sdk>=1.36.0
    opentelemetry-exporter-otlp-proto-http>=1.36.0
    pydantic>=2.0.0
    logfire>=4.0.0

[options.packages.find]
where = src